# commodity_price_forecasting

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_preprocessing.yml
notebooks/: data_acquisition.ipynb  data_preprocessing.ipynb  feature_engineering.ipynb  unique_first_column_values.csv
src/commodity_price_forecasting/: __init__.py  __main__.py  settings.py
src/commodity_price_forecasting/pipelines/data_acquisition/: nodes.py  pipeline.py
src/commodity_price_forecasting/pipelines/data_preprocessing/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_preprocessing/: test_pipeline.py
