[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "commodity_price_forecasting"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
commodity-price-forecasting = "commodity_price_forecasting.__main__:main"

[tool.kedro]
package_name = "commodity_price_forecasting"
project_name = "commodity_price_forecasting"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "commodity_price_forecasting.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "1bcc1a0a2b7c4c73a5c9fa0f42103d51"
